[package]
name = "server-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
http = "1"
nix = { version = "0.31.3", features = ["signal"] }
processkit = "2.1.1"
progenitor-client = "0.14.0"
prost = "0.14"
reqwest = { version = "0.13.4", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
x509-parser = "0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
tonic-prost = "0.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
prettyplease = "0.2.37"
progenitor = "0.14.0"
serde_json = "1.0.150"
syn = "2.0.118"
